@@ -64,6 +64,19 @@ operator|.
 name|IndexWriter
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexReader
+import|;
+end_import
 begin_comment
 comment|/**  * Commits the IndexWriter.  *  */
 end_comment
@@ -76,10 +89,13 @@ extends|extends
 name|PerfTask
 block|{
 DECL|field|commitUserData
+name|Map
+argument_list|<
 name|String
+argument_list|,
+name|String
+argument_list|>
 name|commitUserData
-init|=
-literal|null
 decl_stmt|;
 DECL|method|CommitIndexTask
 specifier|public
@@ -116,7 +132,25 @@ parameter_list|)
 block|{
 name|commitUserData
 operator|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+expr_stmt|;
+name|commitUserData
+operator|.
+name|put
+argument_list|(
+name|OpenReaderTask
+operator|.
+name|USER_DATA
+argument_list|,
 name|params
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|doLogic
@@ -143,54 +177,49 @@ operator|!=
 literal|null
 condition|)
 block|{
-if|if
-condition|(
-name|commitUserData
-operator|==
-literal|null
-condition|)
 name|iw
 operator|.
 name|commit
-argument_list|()
+argument_list|(
+name|commitUserData
+argument_list|)
 expr_stmt|;
+block|}
 else|else
 block|{
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|map
+name|IndexReader
+name|r
 init|=
-operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
+name|getRunData
+argument_list|()
+operator|.
+name|getIndexReader
 argument_list|()
 decl_stmt|;
-name|map
-operator|.
-name|put
-argument_list|(
-name|OpenReaderTask
-operator|.
-name|USER_DATA
-argument_list|,
-name|commitUserData
-argument_list|)
-expr_stmt|;
-name|iw
+if|if
+condition|(
+name|r
+operator|!=
+literal|null
+condition|)
+block|{
+name|r
 operator|.
 name|commit
 argument_list|(
-name|map
+name|commitUserData
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"neither IndexWriter nor IndexReader is currently open"
+argument_list|)
+throw|;
 block|}
 block|}
 return|return
